--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -18,6 +18,8 @@ proxies:
   - {"name":"🇩🇪DE | 🟢 | vless | @Outline_Vpn | 13","type":"vless","server":"greenwolf.fonixapp.org","port":12901,"udp":false,"uuid":"d2bcb15b-8cf0-402c-af32-6b04615144c9","tls":false,"servername":"canva.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"UIgzNUpO2PvGIgjtIK1GEikBFRVvfA1jm7bfor0HlAM","short-id":"b538b3","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🟢 | vless | @Outline_Vpn | 16","type":"vless","server":"212.87.222.42","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @Outline_Vpn | 17","type":"vless","server":"87.120.165.214","port":443,"udp":false,"uuid":"9bc48566-76f9-44d7-8ad0-af41336b4004","tls":false,"servername":"google.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"7tgf5o3AfrE-TWqB3CpBuuZyt7S9tJq6TZ26gPWNyzY","short-id":"3549df188940fe","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🔴 | vless | @prrofile_purple | 96","type":"vless","server":"91.107.190.127","port":3080,"udp":false,"uuid":"a9082ebe-7529-4a88-a003-bc5b8ae3d5bb","tls":false,"servername":"journalofbigdata.springeropen.com","network":"grpc","reality-opts":{"public-key":"ezDK7fd9ieu1_0tDnmurxVheIpDpXofzBRovR8nCtTI","short-id":"3078f8f691b6b4","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 98","type":"vless","server":"zZz.ZzZ.zZz.yasharteam.com","port":443,"udp":false,"uuid":"e355298a-de7d-411f-85d7-eaef3f864380","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇳🇱NL | 🟢 | vless | @prrofile_purple | 104","type":"vless","server":"92.112.126.22","port":8442,"udp":false,"uuid":"31303220-3533-4035-b320-393720313032","tls":false,"servername":"creativecommons.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"pFRfJJDY6TYJq-OVgAqFXhdaeur7gJWJM-RZT8g8yAA","short-id":"59b75803","client-fingerprint":"safari"},"client-fingerprint":"safari"}
   - {"name":"🇨🇦CA | 🟢 | vless | @prrofile_purple | 107","type":"vless","server":"ca.shatak.store","port":7020,"udp":false,"uuid":"5a7a7e1e-7e1e-47ea-9e1e-e1e65e1e7e1e","tls":false,"servername":"journalofbigdata.springeropen.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TmD2tgPqVKs9s4FiP6qgaRR1vE03_l30_PKlljwkJiQ","short-id":"7fec3adb0c3aee58","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🟢 | vless | @prrofile_purple | 110","type":"vless","server":"graygoat.fonixapp.org","port":45846,"udp":false,"uuid":"534c8834-d096-462c-8c16-37571a798ef3","tls":false,"servername":"stackoverflow.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"17q39_glGtdUgFWkKwjxnBG0PxYkJbgt9bfkotaj7yg","short-id":"ac","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -26,11 +28,8 @@ proxies:
   - {"name":"🇩🇪DE | 🟢 | vless | @prrofile_purple | 120","type":"vless","server":"109.61.16.89","port":30938,"udp":false,"uuid":"1068814a-6d43-40d9-a127-0f6b6b77ccfc","tls":false,"servername":"indeed.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"OkwhFGkP6NhXbmfBpBKqJ_HDNEcqbkp0mMc9HeYVBBE","short-id":"9f2b1f07","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🔴 | vless | @prrofile_purple | 128","type":"vless","server":"46.62.168.70","port":23737,"udp":false,"uuid":"debf2a42-1ff4-4ea6-92a4-f6ac49595cc7","tls":false,"servername":"varzesh3.com","network":"grpc","reality-opts":{"public-key":"i5nssGunCVG0W2CI3OM-wGXJwCn9W5Xvm0-tQw_SgEQ","short-id":"7c0b6c88fe5c","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🟢 | vless | @prrofile_purple | 132","type":"vless","server":"delta.realtechshop.top","port":443,"udp":false,"uuid":"ff8fffd7-3546-488b-a5f2-a74896da74a2","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
-  - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 136","type":"vless","server":"direct.yasharteam.com","port":443,"udp":false,"uuid":"59db3b45-830a-4b6c-8b7d-9bd6d7189c7d","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
-  - {"name":"🇩🇪DE | 🔴 | vless | @prrofile_purple | 141","type":"vless","server":"91.107.243.238","port":2025,"udp":false,"uuid":"3f042483-c71c-40cc-a4b7-d79f80db4253","tls":false,"servername":"www.cloudflare.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram : @PouRia_Cheat"},"reality-opts":{"public-key":"AUNIYov4R2TvNmC0cF0NiKWYGqzikosOu4g2wcCALlw","short-id":"8d9c20be72b4","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @v2ray1_ng | 3","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US | 🟢 | vless | @ConfigsHUB | 3","type":"vless","server":"5.181.171.10","port":443,"udp":false,"uuid":"49ed01ad-3bb4-204f-b0ff-a58f658fd618","tls":false,"servername":"speed.cloudflare.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"YNGotlyAx3ELUmi4lxOUjiEDmibqf1pPUTE9o3YYT2Y","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US | 🔴 | vless | @ConfigsHUB | 13","type":"vless","server":"159.65.180.242","port":2053,"udp":false,"uuid":"4629d0f8-cebf-40ea-bc5a-6906c2576ef1","tls":false,"servername":"openstreetmap.org","network":"xhttp","reality-opts":{"public-key":"WbL6cLSObdHDfF8_Pj50yq4tjgL3Pl_cYkoOZrUSaR4","short-id":"d2dbbfffdd700aa1","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🟢 | vless | @ConfigsHUB | 3","type":"vless","server":"91.107.147.144","port":443,"udp":false,"uuid":"1b341a1d-aa59-43a0-9800-09537110f664","tls":false,"servername":"tgju.org","network":"tcp","reality-opts":{"public-key":"VmeqUAFd3DaIfRoft8vuZSP2ZVTsuvG5HquKiIGE2Bs","short-id":"a9","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @free1_vpn | 4","type":"vless","server":"87.120.205.207","port":2025,"udp":false,"uuid":"ebac2049-8367-4eab-a1a5-8b742b2fd3b6","tls":false,"servername":"yahoo.com","network":"grpc","grpc-opts":{"grpc-service-name":"das12327gsgsyu"},"reality-opts":{"public-key":"Cnuh4bNEBvRIjrYBEWSVhX8nr5j46lHuyen_IU2rbSk","short-id":"a76e2f1d45","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 3","type":"vless","server":"192.145.28.109","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 4","type":"vless","server":"45.83.130.133","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -70,6 +69,8 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 13'
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 16'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 17'
+      - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 96'
+      - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 98'
       - '🇳🇱NL | 🟢 | vless | @prrofile_purple | 104'
       - '🇨🇦CA | 🟢 | vless | @prrofile_purple | 107'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 110'
@@ -78,11 +79,8 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 120'
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 128'
       - '❔XX | 🟢 | vless | @prrofile_purple | 132'
-      - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
-      - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 3'
-      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 3'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 13'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 3'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 4'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 3'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 4'
@@ -122,6 +120,8 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 13'
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 16'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 17'
+      - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 96'
+      - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 98'
       - '🇳🇱NL | 🟢 | vless | @prrofile_purple | 104'
       - '🇨🇦CA | 🟢 | vless | @prrofile_purple | 107'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 110'
@@ -130,11 +130,8 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 120'
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 128'
       - '❔XX | 🟢 | vless | @prrofile_purple | 132'
-      - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
-      - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 3'
-      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 3'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 13'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 3'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 4'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 3'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 4'
@@ -173,6 +170,8 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 13'
       - '🇫🇮FI | 🟢 | vless | @Outline_Vpn | 16'
       - '🇩🇪DE | 🟢 | vless | @Outline_Vpn | 17'
+      - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 96'
+      - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 98'
       - '🇳🇱NL | 🟢 | vless | @prrofile_purple | 104'
       - '🇨🇦CA | 🟢 | vless | @prrofile_purple | 107'
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 110'
@@ -181,11 +180,8 @@ proxy-groups:
       - '🇩🇪DE | 🟢 | vless | @prrofile_purple | 120'
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 128'
       - '❔XX | 🟢 | vless | @prrofile_purple | 132'
-      - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
-      - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 3'
-      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 3'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 13'
+      - '🇩🇪DE | 🟢 | vless | @ConfigsHUB | 3'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 4'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 3'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 4'
