--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -30,9 +30,7 @@ proxies:
   - {"name":"🇫🇮FI | 🟢 | vless | @prrofile_purple | 136","type":"vless","server":"direct.yasharteam.com","port":443,"udp":false,"uuid":"59db3b45-830a-4b6c-8b7d-9bd6d7189c7d","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🔴 | vless | @prrofile_purple | 141","type":"vless","server":"91.107.243.238","port":2025,"udp":false,"uuid":"3f042483-c71c-40cc-a4b7-d79f80db4253","tls":false,"servername":"www.cloudflare.com","network":"grpc","grpc-opts":{"grpc-service-name":"Telegram : @PouRia_Cheat"},"reality-opts":{"public-key":"AUNIYov4R2TvNmC0cF0NiKWYGqzikosOu4g2wcCALlw","short-id":"8d9c20be72b4","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @v2ray1_ng | 3","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US | 🟢 | vless | @ConfigsHUB | 0","type":"vless","server":"45.158.127.84","port":443,"udp":false,"uuid":"7ac2252d-a966-486a-bca9-fcd148e60078","tls":false,"servername":"google.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"W3lJRwhDFMycX3Q056SN4T9v_q_PvjBWEjmDF8Thsyc","short-id":"25","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US | 🟢 | vless | @ConfigsHUB | 1","type":"vless","server":"5.181.171.10","port":443,"udp":false,"uuid":"49ed01ad-3bb4-204f-b0ff-a58f658fd618","tls":false,"servername":"speed.cloudflare.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"YNGotlyAx3ELUmi4lxOUjiEDmibqf1pPUTE9o3YYT2Y","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US | 🔴 | vless | @ConfigsHUB | 2","type":"vless","server":"142.93.190.166","port":2053,"udp":false,"uuid":"4629d0f8-cebf-40ea-bc5a-6906c2576ef1","tls":false,"servername":"openstreetmap.org","network":"xhttp","reality-opts":{"public-key":"WbL6cLSObdHDfF8_Pj50yq4tjgL3Pl_cYkoOZrUSaR4","short-id":"d2dbbfffdd700aa1","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US | 🔴 | vless | @ConfigsHUB | 3","type":"vless","server":"54.146.158.90","port":443,"udp":false,"uuid":"cd54a584-2aeb-4a81-8558-84822c5e60d1","tls":false,"servername":"store.steampowered.com","network":"tcp","reality-opts":{"public-key":"J2bRPBQbUXzfoe-sch7fxMlzKqaX2L0kEm4Rcly6Kgo","short-id":"d0c43a7737","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🔴 | vless | @free1_vpn | 4","type":"vless","server":"87.120.205.207","port":2025,"udp":false,"uuid":"ebac2049-8367-4eab-a1a5-8b742b2fd3b6","tls":false,"servername":"yahoo.com","network":"grpc","grpc-opts":{"grpc-service-name":"das12327gsgsyu"},"reality-opts":{"public-key":"Cnuh4bNEBvRIjrYBEWSVhX8nr5j46lHuyen_IU2rbSk","short-id":"a76e2f1d45","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 3","type":"vless","server":"192.145.28.109","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 4","type":"vless","server":"45.83.130.133","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -84,9 +82,7 @@ proxy-groups:
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 3'
-      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 0'
-      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 1'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 2'
+      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 3'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 4'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 3'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 4'
@@ -138,9 +134,7 @@ proxy-groups:
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 3'
-      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 0'
-      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 1'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 2'
+      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 3'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 4'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 3'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 4'
@@ -191,9 +185,7 @@ proxy-groups:
       - '🇫🇮FI | 🟢 | vless | @prrofile_purple | 136'
       - '🇩🇪DE | 🔴 | vless | @prrofile_purple | 141'
       - '🇩🇪DE | 🟢 | vless | @v2ray1_ng | 3'
-      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 0'
-      - '🇺🇸US | 🟢 | vless | @ConfigsHUB | 1'
-      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 2'
+      - '🇺🇸US | 🔴 | vless | @ConfigsHUB | 3'
       - '🇩🇪DE | 🔴 | vless | @free1_vpn | 4'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 3'
       - '🇨🇿CZ | 🟢 | vless | @Outlinev2rayNG | 4'
